...
        return sdk.validationStatus?.hint ?? ""
    }

    private var buttonTitle: String {
        switch viewModel.buttonState {
        case .running:
            return "Stop"
        default:
            return "Record"
        }
    }

    private var buttonBackgroundColor: Color {
        viewModel.buttonState == .disable ? .gray : .brandPrimary
    }
...
